--- a/feature/build.gradle
+++ b/feature/build.gradle
@@ -27,6 +27,8 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':result-sdk')
+    implementation project(':common')
+    implementation project(':common-ui')
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
