--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':result', ':result-sdk', ':feature', ':common-ui'
+include ':app', ':result', ':result-sdk', ':feature', ':common-ui', ':common'
