--- a/feature/build.gradle
+++ b/feature/build.gradle
@@ -26,8 +26,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':result-sdk')
-    implementation project(':common')
+    api project(':result-sdk')
     implementation project(':common-ui')
 
     implementation 'com.android.support:appcompat-v7:26.1.0'
